; ModuleID = '/home/carl/AnghaBench/freebsd/sys/arm/xilinx/extr_uart_dev_cdnc.c_cdnc_uart_bus_transmit.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/arm/xilinx/extr_uart_dev_cdnc.c_cdnc_uart_bus_transmit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.uart_softc = type { i32, i32, i32, i32*, %struct.uart_bas }
%struct.uart_bas = type { i32 }

@CDNC_UART_ISTAT_REG = common dso_local global i32 0, align 4
@CDNC_UART_INT_TXEMPTY = common dso_local global i32 0, align 4
@CDNC_UART_FIFO = common dso_local global i32 0, align 4
@CDNC_UART_IEN_REG = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.uart_softc*)* @cdnc_uart_bus_transmit to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cdnc_uart_bus_transmit(%struct.uart_softc* %0) #0 {
  %2 = alloca %struct.uart_softc*, align 8
  %3 = alloca i32, align 4
  %4 = alloca %struct.uart_bas*, align 8
  store %struct.uart_softc* %0, %struct.uart_softc** %2, align 8
  %5 = load %struct.uart_softc*, %struct.uart_softc** %2, align 8
  %6 = getelementptr inbounds %struct.uart_softc, %struct.uart_softc* %5, i32 0, i32 4
  store %struct.uart_bas* %6, %struct.uart_bas** %4, align 8
  %7 = load %struct.uart_softc*, %struct.uart_softc** %2, align 8
  %8 = getelementptr inbounds %struct.uart_softc, %struct.uart_softc* %7, i32 0, i32 2
  %9 = load i32, i32* %8, align 8
  %10 = call i32 @uart_lock(i32 %9)
  %11 = load %struct.uart_bas*, %struct.uart_bas** %4, align 8
  %12 = load i32, i32* @CDNC_UART_ISTAT_REG, align 4
  %13 = load i32, i32* @CDNC_UART_INT_TXEMPTY, align 4
  %14 = call i32 @WR4(%struct.uart_bas* %11, i32 %12, i32 %13)
  store i32 0, i32* %3, align 4
  br label %15

15:                                               ; preds = %32, %1
  %16 = load i32, i32* %3, align 4
  %17 = load %struct.uart_softc*, %struct.uart_softc** %2, align 8
  %18 = getelementptr inbounds %struct.uart_softc, %struct.uart_softc* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 8
  %20 = icmp slt i32 %16, %19
  br i1 %20, label %21, label %35

21:                                               ; preds = %15
  %22 = load %struct.uart_bas*, %struct.uart_bas** %4, align 8
  %23 = load i32, i32* @CDNC_UART_FIFO, align 4
  %24 = load %struct.uart_softc*, %struct.uart_softc** %2, align 8
  %25 = getelementptr inbounds %struct.uart_softc, %struct.uart_softc* %24, i32 0, i32 3
  %26 = load i32*, i32** %25, align 8
  %27 = load i32, i32* %3, align 4
  %28 = sext i32 %27 to i64
  %29 = getelementptr inbounds i32, i32* %26, i64 %28
  %30 = load i32, i32* %29, align 4
  %31 = call i32 @WR4(%struct.uart_bas* %22, i32 %23, i32 %30)
  br label %32

32:                                               ; preds = %21
  %33 = load i32, i32* %3, align 4
  %34 = add nsw i32 %33, 1
  store i32 %34, i32* %3, align 4
  br label %15

35:                                               ; preds = %15
  %36 = load %struct.uart_bas*, %struct.uart_bas** %4, align 8
  %37 = load i32, i32* @CDNC_UART_IEN_REG, align 4
  %38 = load i32, i32* @CDNC_UART_INT_TXEMPTY, align 4
  %39 = call i32 @WR4(%struct.uart_bas* %36, i32 %37, i32 %38)
  %40 = load %struct.uart_softc*, %struct.uart_softc** %2, align 8
  %41 = getelementptr inbounds %struct.uart_softc, %struct.uart_softc* %40, i32 0, i32 1
  store i32 1, i32* %41, align 4
  %42 = load %struct.uart_softc*, %struct.uart_softc** %2, align 8
  %43 = getelementptr inbounds %struct.uart_softc, %struct.uart_softc* %42, i32 0, i32 2
  %44 = load i32, i32* %43, align 8
  %45 = call i32 @uart_unlock(i32 %44)
  ret i32 0
}

declare dso_local i32 @uart_lock(i32) #1

declare dso_local i32 @WR4(%struct.uart_bas*, i32, i32) #1

declare dso_local i32 @uart_unlock(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
